auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: auth
spec:
  selector:
    app: auth
  ports:
    - name: http
      port: 4181
      targetPort: 4181
